packages/typ/tests/fixtures/diagnostics/0712_fcm_pack_tuple_type_mismatch_06.ml.expected
File "0712_fcm_pack_tuple_type_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0712_fcm_pack_tuple_type_mismatch_06 is not a valid module name.

File "0712_fcm_pack_tuple_type_mismatch_06.ml", line 11, characters 16-22:
11 | let _ = (module M_zeta : Cell_zeta with type t = bool * bool)
                     ^^^^^^
Error: This expression has type (module Cell_zeta with type t = bool * bool)
       but an expression was expected of type
         (module Cell_zeta with type t = M_zeta.t)
       Type bool * bool is not compatible with type M_zeta.t = int * int
       Type bool is not compatible with type int
